[package]
name = "lending_protocol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lending_protocol"

[features]
default = []
dev = []
local = []
custom-heap = []
anchor-debug = []
custom-panic = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = "1.0.2"
solana-security-txt = "1.1.1"
ra-solana-math = "0.1.0"
brine-ed25519 = "0.7.0"