[package]
name = "price-mock"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "price_mock"

[features]
default = []
dev = []
local = []
custom-heap = []
anchor-debug = []
custom-panic = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
switchboard-on-demand = "0.12.1"